force-app/main/default/objects/Employee__c/fields/Base_Pay__c.field-meta.xml
<CustomField>
    <fullName>Base_Pay__c</fullName>
    <label>Base Pay</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>