force-app/main/default/objects/Employee__c/fields/Bonus_Pay__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Pay__c</fullName>
    <label>Bonus Pay</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>