force-app/main/default/objects/Employee__c/fields/Total_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_Pay__c</fullName>
    <formula>Base_Pay__c  +  Bonus_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>